--- a/src/component/OrMenu/OrMenu.scss
+++ b/src/component/OrMenu/OrMenu.scss
@@ -8,19 +8,18 @@
     width: 100%;
     background-color: $neutral-bg-1-default;
     transition: height 0.3s ease-in-out, padding 0.3s ease-in-out;
-    z-index: 5;
+    z-index: 6;
     border-radius: 20px;
     padding: 0px;
     box-sizing: border-box;
     overflow: hidden;
     box-sizing: border-box;
 
-
-  
-  
     &.open {
+      border-bottom-right-radius: 0px;
+      border-bottom-left-radius: 0px;
       padding: 24px;
-      height: 300px; /* یا یک مقدار بزرگ‌تر از محتوای واقعی */
+      height: 180px; /* یا یک مقدار بزرگ‌تر از محتوای واقعی */
       transition: height 0.3s ease-in-out, padding 0.3s ease-in-out;
     }
   }
