--- a/src/style.scss
+++ b/src/style.scss
@@ -38,27 +38,26 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-   align-items: center;
-    overflow: auto;
+    align-items: center;
+    overflow: hidden;
 }
 
 .content-container{
     max-width: 1400px;  
     padding: $space6;
     width: 100%;
-    justify-content: space-between;
-    padding-bottom: 120px;
-    overflow: hidden;
+    overflow: auto;
     box-sizing: border-box;
-
+  
     @media screen and (max-width: 1200px){
 
-        padding-bottom: 320px;
+
     }
 
     @media screen and (max-width: 600px){
-        padding: $space4;
-        padding-bottom: 320px;
+       
+        margin-bottom: 89px;
+   
 
   
      }
