--- a/src/base/type-style.scss
+++ b/src/base/type-style.scss
@@ -150,6 +150,20 @@
     font-size: 49px;
 }
 
+.h5{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 400;
+  line-height: 44px;
+  font-size: 31px;
+}
+
+.h5-strong{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 700;
+  line-height: 44px;
+  font-size: 31px;
+}
+
 
 .h6{
   font-family: "Titillium Web", sans-serif ;
