--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -362,3 +362,16 @@
     flex-direction: column;
     gap: 12px;
 }
+
+.not-found
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    overflow: visible;
+    grid-column-start: 1;
+    grid-column-end: 14;
+    height: 50vh;
+}
