--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -50,6 +50,7 @@
     width: 40px;
     height: 40px;
 }
+
 .icon-wrapper{
     width: 100%;
     height: 80px;
@@ -153,7 +154,7 @@
         width: 40px;
         height: 40px;
         transition: width 0.2s, height 0.2s; 
-
+        -webkit-tap-highlight-color: transparent;
         @media screen and (max-width: 480px){
             width: 32px;
             height: 32px;
@@ -175,6 +176,7 @@
     }
     &:active{
         background-color: $neutral-bg-2-press;
+        -webkit-tap-highlight-color: transparent;
     }
     
 }
