--- a/src/component/OrMenu/OrMenu.scss
+++ b/src/component/OrMenu/OrMenu.scss
@@ -30,6 +30,10 @@
     flex-direction: column;
     gap: $space2;
     justify-content: center;
+        a{
+      color: $neutral-fg-1-default;
+      text-decoration: none;
+    }
 
   }
 
@@ -40,6 +44,8 @@
     border-radius: $radius2;
     display: flex;
     gap: $space2;
+    text-decoration: none;
+    
     
     
 
