--- a/src/Page/Icons/Icons.scss
+++ b/src/Page/Icons/Icons.scss
@@ -4,7 +4,7 @@
 {
     display: flex;
     flex-direction: row;
- 
+    width: 100%;
 }
 .view{
     width: 100%;
@@ -14,17 +14,26 @@
     align-items: center;
     height: 100vh;
     overflow: hidden;
+    transition: margin-left 0.3s ease-in-out, width 0.3s ease-in-out, width 0.3s ease-in-out;
+
+    &.filter-closed {
+        margin-left: 0;
+        width: 100%;
+    }
+
+    &.filter-open {
+        @media screen and (min-width: 1201px) {
+            margin-left: 0;
+            width: calc(100% - 320px);
+        }
+    }
 
     @media screen and (max-width: 780px){
         flex-direction: column;
-        
-        }
-} 
-
-.item
-{   
-    
+    }
 }
+
+/* Item styles will be added here if needed */
 
 .icon-view{
     img{
@@ -59,7 +68,7 @@
         height: 100%;
     }
 
-    
+
 }
 .box-wrapper{
     gap: 8px;
