--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -8,7 +8,7 @@
     overflow: hidden;
     height: 100vh;
 
-    
+
 }
 
 .icon-list-main{
@@ -24,12 +24,12 @@
 
 
 
-    
+
 }
 
 .icon-list{
     max-width: 1600px;
-  
+
     height: fit-content;
     padding: $space2;
     display: grid;
@@ -41,17 +41,17 @@
 
     @media screen and (max-width: 480px){
         grid-template-columns: repeat(auto-fill, 80px);
-        
+
         }
 
         @media screen and (max-width: 780px){
                 padding-bottom: 220px;
-     
+
          }
 }
 
 .icon-view{
-   
+
     width: 40px;
     height: 40px;
 }
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-   
+
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
@@ -95,10 +95,10 @@
 
 //     }
 //   }
-  
+
   .icon-sidepanel-name{
     text-align: left;
- 
+
 }
 
 .skelton{
@@ -107,7 +107,7 @@
     width: 100%;
     border-radius: 8px;
 }
-@keyframes skeleton-loading { 
+@keyframes skeleton-loading {
     0% {
       background-color: hsl(0, 0%, 96%);
     }
@@ -131,7 +131,7 @@
     max-width: 1400px;
     width: 100%;
     box-sizing: border-box;
-    
+
     @media screen and (max-width: 480px){
     padding: $space2;
     }
@@ -148,7 +148,7 @@
     border-radius: $radius3;
     cursor: pointer;
     gap: 8px;
-    transition: background-color 0.3s; 
+    transition: background-color 0.3s;
 
     @media screen and (max-width: 480px){
         padding: $space1;
@@ -158,32 +158,32 @@
     svg{
         width: 40px;
         height: 40px;
-        transition: width 0.2s, height 0.2s; 
+        transition: width 0.2s, height 0.2s;
         -webkit-tap-highlight-color: transparent;
         @media screen and (max-width: 480px){
             width: 32px;
             height: 32px;
-    
+
         }
     }
 
     &:hover{
-        background-color: $neutral-bg-1-hover;   
+        background-color: $neutral-bg-1-hover;
         svg{
-       
+
 
             @media screen and (max-width: 480px){
                 width: 32px;
                 height: 32px;
-        
+
             }
-        } 
+        }
     }
     &:active{
         background-color: $neutral-bg-2-press;
         -webkit-tap-highlight-color: transparent;
     }
-    
+
 }
 
 
@@ -194,7 +194,7 @@
     display: flex;
     width: 100%;
     flex-direction: row-reverse;
-   
+
     button{
         position: absolute;
         top: 0px;
@@ -205,7 +205,6 @@
   }
 
 .side-panel{
-
     width: 320px;
     min-width: 320px;
     display: flex;
@@ -214,27 +213,35 @@
     position: sticky;
     top: 0;
     border-left: 1px solid $neutral-border-7-default;
-    transition: background-color 0.3s ease-in-out;
-    overflow-y: auto; 
+    overflow-y: auto;
     overflow-x: hidden;
     background-color: $neutral-bg-1-default;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+
+    &.visible {
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    &.hidden {
+        transform: translateX(100%);
+        opacity: 0;
+    }
 
     @media screen and (max-width: 780px){
         position: fixed;
         top: 0px;
         height: 100vh;
         width: 100%;
-        
-     }
-
+    }
 }
 .side-panel-item{
     z-index: 2;
     background: $neutral-bg-1-default;
-    
+
     padding: 16px 24px;
     gap: 24px;
-   
+
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid $neutral-border-7-default;
@@ -251,13 +258,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 
     svg{
         width: 24px;
         height: 24px;
     }
-    
+
 }
 .side-panel-item-body{
     display: flex;
@@ -285,7 +292,7 @@
     padding: 24px;
     box-sizing: border-box;
 
-    
+
     button{
         width: 100%;
     }
@@ -301,7 +308,7 @@
 .svg-code-box{
 
     width: 100%;
-   
+
 
     box-sizing: border-box;
 
@@ -318,7 +325,7 @@
         border-radius: $radius2;
         overflow-y: auto;
         padding: $space3;
-        background-color: $neutral-bg-3-default;  
+        background-color: $neutral-bg-3-default;
     }
 }
 .single-download-box{
@@ -385,7 +392,7 @@
 }
 .announcement-wrapper
 {
-    padding: 24px; 
+    padding: 24px;
     width: 100%;
     max-width: 1600px;
     display: flex;
@@ -393,7 +400,7 @@
     background-color: transparent;
     height: fit-content;
 
-    
+
 }
 .announcement
 {
@@ -414,6 +421,6 @@
         gap: 40px;
         border-radius: 99px;
         transition: padding 0.5s ease, gap 0.5s ease, border-radius 0.5s ease;
-        
+
     }
 }
