--- a/src/Page/Icons/Icons.scss
+++ b/src/Page/Icons/Icons.scss
@@ -5,7 +5,34 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
+
+.main-content-area {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    position: relative;
+}
+
+.content-wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    position: relative;
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    will-change: width;
+
+    /* When side panel is open, adjust width to make room for it */
+    &.side-panel-open {
+        width: calc(100% - 320px);
+
+        @media screen and (max-width: 780px) {
+            width: 100%;
+        }
+    }
+}
+
 .view{
     width: 100%;
     min-width: 0;
@@ -14,7 +41,9 @@
     align-items: center;
     height: 100vh;
     overflow: hidden;
-    transition: margin-left 0.3s ease-in-out, width 0.3s ease-in-out, width 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    will-change: margin-left, width;
+    flex-grow: 1;
 
     &.filter-closed {
         margin-left: 0;
