--- a/src/Page/Icons/Icons.scss
+++ b/src/Page/Icons/Icons.scss
@@ -13,6 +13,7 @@
     flex-direction: row;
     width: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .content-wrapper {
@@ -34,7 +35,7 @@
 }
 
 .view{
-    width: 100%;
+    // width: 100%;
     min-width: 0;
     display: flex;
     flex-direction: column;
