--- a/src/component/OrFilter/OrFilter.scss
+++ b/src/component/OrFilter/OrFilter.scss
@@ -16,12 +16,12 @@
     &.visible {
         transform: translateX(0);
         opacity: 1;
-        min-width: 320px;
+        width: 420px;
 
         @media screen and (max-width: 600px){
             transform: translatey(0);
             // position: fixed;
-            min-width: 100%;
+            width: 100%;
             opacity: 1;
          }
     }
@@ -29,12 +29,12 @@
     &.hidden {
         transform: translateX(-100%);
         opacity: 0;
-        min-width: 0px;
+        width: 0px;
         width: 0px;
 
         @media screen and (max-width: 600px){
             transform: translatey(+100%);
-            min-width: 100%;
+            width: 100%;
             opacity: 1;
             
          }
@@ -78,6 +78,7 @@
     z-index: 10;
     position: sticky;
     top: 0;
+    width: 100%;
 
     div{
         display: flex;
