--- a/src/component/SidePanel/SidePanel.scss
+++ b/src/component/SidePanel/SidePanel.scss
@@ -122,9 +122,14 @@
     width: 100%;
     padding: 24px;
     box-sizing: border-box;
+    transition: all 0.3s ease;
 
     button{
         width: 100%;
+    }
+
+    &.hidden {
+        display: none;
     }
 }
 
