--- a/src/component/OrIconHeader/OrIconHeader.scss
+++ b/src/component/OrIconHeader/OrIconHeader.scss
@@ -31,12 +31,12 @@
         flex-grow: 1;
         align-items: center;
         display: flex;
-        
+
 
         @media screen and (max-width: 1200px){
             display: none;
         }
-    
+
     }
 
     @media screen and (max-width: 1200px){
@@ -83,22 +83,22 @@
 
 .icon-pack-title{
     display: flex;
-    width: 112px;   
+    width: 112px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     gap: $space0;
-    
+
 
     span{
         &t3-strong{
             color: $neutral-fg-1-default;
         }
-        
+
         &.b1{
             color: $neutral-fg-4-default;
         }
-        
+
     }
     @media screen and (max-width: 1200px){
         flex-grow: 1;
@@ -106,8 +106,8 @@
     @media screen and (max-width: 1200px){
         align-items: center;
     }
-   
-   
+
+
 }
 .logo-icon{
     padding: $space0 $space0;
@@ -119,11 +119,11 @@
 
     @media screen and (max-width: 1200px){
         width: 56px;
-        height: 20px;  
+        height: 20px;
     }
 
     span{
-       
+
         background-color: $brand-bg-1-default;
         color: $neutral-fg-10-default;
         padding: $space0-5 $space1;
@@ -132,7 +132,7 @@
 
     }
 
-   
+
 }
 
 .mobile-logo
@@ -142,22 +142,23 @@
 
 .header-action
 {
-    display:flex;
+    display: flex;
     gap: $space3;
-    // @media screen and (max-width: 1200px){
-    //     display: none;
-    // }
-    
 
+    .header-mobile-actions {
+        display: none; /* Hide by default on desktop */
+
+        @media screen and (max-width: 1200px) {
+            display: flex; /* Show on mobile */
+            align-items: center;
+            justify-content: flex-end;
+        }
+    }
 }
 .mobile-actions
-{ 
+{
     display: flex;
     gap: $space2;
-
-    @media screen and (min-width: 1200px){
-        display: none;
-    }
 }
 
 .search-div-mobile{
@@ -173,13 +174,42 @@
     }
 }
 
+.sub-header {
+    background-color: $neutral-bg-1-default;
+    border-bottom: 1px solid $neutral-border-7-default;
+    padding: $space2 $space8;
+    box-sizing: border-box;
+    width: 100%;
+
+
+    .sub-header-content {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .filter-button-container {
+        display: flex;
+        align-items: center;
+    }
+
+    /* Mobile actions moved to header */
+
+    @media screen and (max-width: 1200px) {
+        padding: $space2 $space4;
+
+
+        /* Filter button container is always visible */
+
+        /* Mobile actions moved to header */
+    }
+}
+
 .header-filter-action{
-    display:flex;
+    display: flex;
     gap: $space3;
 
     @media screen and (max-width: 1200px){
-        display: none;
+        display: none; /* Hide download button on mobile */
     }
-    
-
 }
